<resources>

    <string name="Quiz_Unit">Quiz units</string>
    <string name="Math_Button">Maths</string>
    <string name="English_Button">English</string>
    <string name="Geography_Button">Geography</string>

    <string name="choose_your_quest">Choose your Quest!</string>

    <string name="maths_text">Maths</string>
    <string name="english_text">English</string>
    <string name="geography_text">Geography</string>


...
    

    <string name="t1_solve_option">1</string>
    <string name="t2_solve_option">2</string>


    <string name="app_name">LearnQuest</string>
    <string name="login_title">LearnQuest</string>
    <string name="login_title2">Have fun learning!</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_go">LET\'S GO!</string>
    <string name="login_noAccount">I don\'t have an account</string>
    <string name="quest_icon_description">Icono de una quest</string>
    <string name="snowy_mountains_description">Imagen background del login</string>
    <string name="shiny_star_description">Background imagen del login</string>
...
    <string name="exp_to_display">25 / 100</string>
    <string name="new_quest_button">Create a new quest</string>
    <string name="new_quest_icon_description">create a new quest icon</string>
    <string name="log_out_button">Log out</string>
    <string name="log_out_icon_description">log out icon</string>

    <string name="hint_activity_title">Hint</string>
    <string name="yes_cheat_button_text">Yes</string>
    <string name="no_cheat_button_text">No</string>
    <string name="confirmation_cheat">Are your sure?</string>ç
    <string name="confirmation_info_cheat">The hint could be true or false. Either way you will lose some XP</string>
    <string name="return_to_question_button_text">Return to question!</string>
    <string name="empty_string">"????"</string>

    <string name="final_quiz_activity_title">Quiz End</string>
    <string name="gold_medal_description">Medalla de final de quiz (posibilidad de que sea sliver o bronce)</string>
    <string name="earned_display">You earned 40 xp!</string>
    <string name="xp_left_to_next_level">You need 1300xp to reach level 3!</string>
    <string name="return_home_button">Return to home</string>
    <string name="level_display_final_quiz">Level 0</string>

    <string name="quiz_screen_title">Example Quiz</string>
    <string name="question_number_text">Question 1</string>
    <string name="question_text">Question text</string>
    <string name="option1_text">Option 1</string>
    <string name="option2_text">Option 2</string>
    <string name="option3_text">Option 3</string>
    <string name="correct_text">Correct</string>
    <string name="incorrect_text">Incorrect</string>
    <string name="hint_button_text">Hint</string>
    <string name="next_button_text">Next</string>
    <string name="quests_unit_title">Quests</string>

    <string name="registro_screen_title">Sign up</string>
    <string name="registro_username_text">Username</string>
    <string name="registro_password_text">Password</string>
    <string name="registro_correo_text">Email</string>
...
    <string name="details_eliminateUserAlert">Are you sure you want to remove this User from the database forever?</string>
    <string name="details_returnLoginAlert">¿Are you sure you want to logout?</string>
    <string name="message_returnLoginAlert">Logout</string>
    <string name="message_eminateUserAlert">Remove User</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_eliminateUserAlert">Eliminate it!</string>
    <string name="registro_warning_textTooLong">Invalid username, it is too long</string>

    <string name="remove_user">Remove user</string>
    <string name="remove_user_icon_description">Imagen de borrado de usuario</string>
    <string name="question_timer_finished_text">Timeout!</string>
    <string-array name="imagenes_nombres">
        <item>Predeterminada</item>
...
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_zero">0</string>

    <string name="button_enter_mathQuiz">Enter</string>
    <string name="button_next_mathQuiz">Next</string>
    <string name="button_clean_mathQuiz">Clean</string>
    <string name="button_hint_mathQuiz">Hint</string>
    <string name="profile_photo_title">Profile Image Preview</string>
    <string name="registro_warning_text_same_user">Username already exists</string>
    <string name="statistics_button">Statistics</string>
    <string name="achievements">Achievements</string>
    <string name="statistics_text">User board</string>
...
