...

            <Button
                android:id="@+id/math_quiz_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/math_quiz_5"
                android:layout_width="60dp"
                android:layout_height="60dp"
...

            <Button
                android:id="@+id/math_quiz_8"
                android:layout_width="60dp"
                android:layout_height="60dp"
...

            <Button
                android:id="@+id/math_quiz_4"
                android:layout_width="60dp"
                android:layout_height="60dp"
...

            <Button
                android:id="@+id/math_quiz_clean"
                android:layout_width="70dp"
                android:layout_height="36dp"
...

            <Button
                android:id="@+id/math_quiz_2"
                android:layout_width="60dp"
                android:layout_height="60dp"
...

            <Button
                android:id="@+id/math_quiz_7"
                android:layout_width="60dp"
                android:layout_height="60dp"
...

            <Button
                android:id="@+id/math_quiz_3"
                android:layout_width="60dp"
                android:layout_height="60dp"
...

            <Button
                android:id="@+id/math_quiz_9"
                android:layout_width="60dp"
                android:layout_height="60dp"
...

            <Button
                android:id="@+id/math_quiz_1"
                android:layout_width="60dp"
                android:layout_height="60dp"
...

            <Button
                android:id="@+id/math_quiz_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/math_quiz_6"
                android:layout_width="60dp"
                android:layout_height="60dp"
...

            <Button
                android:id="@+id/math_quiz_0"
                android:layout_width="60dp"
                android:layout_height="60dp"
...

            <Button
                android:id="@+id/math_quiz_hint"
                android:layout_width="70dp"
                android:layout_height="36dp"
...

        <TextView
            android:id="@+id/question_math_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/mathTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/user_answer_math"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/answer_math"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
