...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title2"
        app:layout_constraintVertical_bias="0.323">

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_gravity="center_horizontal"
            android:ems="3"
            android:gravity="start"
            android:hint="@string/login_username"
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_gravity="start|center_horizontal"
            android:ems="3"
            android:gravity="start"
            android:hint="@string/login_password"
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/lets_go_button"
            android:onClick="onLetsGoClicked"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#2D94FA"
            android:text="@string/login_go"
...
