...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quizunite_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                tools:text="Quiz Title" />
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/quizunit_solve_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selector"
                    android:text="@string/T1_Topic_solve_button"
                    android:textColor="@android:color/white" />

...
